using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string ANIM_IDLE = "isIdle";
    public const string ANIM_DANCE = "isDance";
    public const string ANIM_WIN = "isWin";
    public const string ANIM_FILL = "fill";
    public const string ANIM_HOLD = "hold";
    public const string ANIM_SHOOT = "shoot";
    public const string ANIM_EMPTY = "empty";
    public const string ANIM_SHAKING = "shaking";
    public const string ANIM_NONE = "none";
    public const string ANIM_FADEIN = "fadeIn";
    public const string ANIM_FADEOUT = "fadeOut";
    public const string ANIM_SLIDEUP = "slideUp";
    public const string ANIM_SLIDEDOWN = "slideDown";
    public const string ANIM_SLIDELEFT = "slideLeft";
    public const string ANIM_SLIDERIGHT = "slideRight";
    public const string ANIM_SLIDEFROMLEFT = "slideFromLeft";
    public const string ANIM_SLIDEFROMRIGHT = "slideFromRight";

    public const string TAG_WALL = "Wall";
    public const string TAG_TARGET = "Target";
    public const string TAG_ARROW = "Arrow";
    public const string TAG_SPINE = "Spine";
    public const string TAG_GREENBUFF = "GreenBuff";
    public const string TAG_YELLOWBUFF = "YellowBuff";
    public const string TAG_LEVEL = "Level";
    public const string TAG_LEVELBOUNDARY = "LevelBoundary";
}
